# alpacanet-the-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/models/: alpaca.mtl  cube.mtl  cubemap.mtl  world.mtl
assets/models/raw/: alpaca.blend  alpaca.blend1  world.blend  world.blend1
assets/shaders/: compile.bat  compile.sh
assets/shaders/basic/: frag.spv  shader.frag  shader.vert  vert.spv
assets/shaders/basictextured/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
assets/shaders/basictexturedambient/: frag.spv  shader.frag  shader.vert  vert.spv
assets/shaders/particle/: frag.spv  shader.frag  shader.vert  vert.spv
assets/shaders/shadow/: compile.bat  shader.frag  shader.vert  vert.spv
src/: Cube.cpp  Cube.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Renderer.cpp  Renderer.h  TestGameObject.cpp  TestGameObject.h  Window.cpp  Window.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
src/GameObjects/: Cube.cpp  Cube.h  GameObject.cpp  GameObject.h  ModelObject.cpp  ModelObject.h  TestGameObject.cpp  TestGameObject.h
src/Materials/: BasicMaterial.cpp  BasicMaterial.h  BasicTexturedMaterial.cpp  BasicTexturedMaterial.h  Material.cpp  Material.h  ShadowMaterial.cpp  ShadowMaterial.h
src/Models/: Vertex.cpp  Vertex.h
src/game_objects/: camera.cpp  camera.h  cube.cpp  cube.h  drawable_object.cpp  drawable_object.h  game_object.cpp  game_object.h  light.cpp  light.h  model_object.cpp  model_object.h  particlesystem.cpp  particlesystem.h
src/graphics/: command_pool.cpp  command_pool.h  graphics.cpp  graphics.h  instance.cpp  instance.h  logical_device.cpp  logical_device.h  physical_device.cpp  physical_device.h  renderer.cpp  renderer.h  surface.cpp  surface.h  vulkan_utilities.h
src/graphics/buffers/: buffer.cpp  buffer.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
src/graphics/commands/: command_buffer.cpp  command_buffer.h
src/graphics/gui/: gui.cpp  gui.h
src/graphics/images/: image.cpp  image.h
src/graphics/pipeline/: pipeline.h  swapchain.cpp  swapchain.h
src/managers/: material_manager.cpp  material_manager.h
src/materials/: basic_material.cpp  basic_material.h  basic_textured_material.cpp  basic_textured_material.h  material.cpp  material.h  particle_material.cpp  particle_material.h  shadow_material.cpp  shadow_material.h
src/models/: particle.cpp  particle.h  vertex.cpp  vertex.h
src/scenes/: main_scene.cpp  main_scene.h  scene.cpp  scene.h
src/scenes/scene_objects/: alpaca.cpp  alpaca.h
src/util/: Utilities.cpp  Utilities.h
src/utils/: bounds.cpp  bounds.h  file_utilities.cpp  file_utilities.h  random_utilities.cpp  random_utilities.h
